# ageoftime-wiki

./: .gitignore  README.md  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml
docs/: about.md  areas.md  clothing.md  commands.md  contributing.md  crate-rates.md  death.md  dye-calculator.md  dye-recipe-finder.md  dye-tools.md  dyes.md  enemies.md  getting-started.md  gold.md  index.md  items.md  magic.md  movement-items.md  police-mechanics.md  tips.md  voice-menu.md  weapons.md  world-objects.md
docs/assets/archive/: cloth.txt  clothing.txt  metal.txt  weapons.txt
docs/assets/downloads/: inventory.cs  log-challenge-logs.txt
docs/assets/dso/: dso-tool.css  dso-tool.js  dsodecomp.py
docs/gameplay/: index.md
docs/items/: cloth.md  clothing.md  dyes.md  index.md  metals.md  movement-items.md  ores.md  weapons.md  wood-types.md
docs/map/: index.html
docs/npcs/: banker.md  blacksmith.md  index.md  police.md  post-office.md  shopkeepers.md  sword-giver.md
docs/reference/: index.md  inventory.md  server-commands.md
docs/reference/exploits/: crash-parchment.md  index.md
docs/reference/torque-script/: console-class-dump.md  console-function-dump.md  datablocks.md  dso-decompiler.md  global-variables.md  index.md  tagged-strings.md
docs/world/: index.md
docs/world/locations/: arena.md  auric-fields.md  beach-house.md  blue-hill.md  cave.md  distant-forest.md  fort-bad.md  hook-swing.md  level-1.md  (+10 more)
scripts/: build_console_dumps.py
tools/pygments-torquescript/: pyproject.toml
tools/pygments-torquescript/pygments_torquescript/: __init__.py
