[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-torquescript"
version = "0.1.0"
description = "Pygments lexer for TorqueScript (Age of Time)"
requires-python = ">=3.8"
dependencies = ["Pygments>=2.0"]

[tool.setuptools]
packages = ["pygments_torquescript"]

# Register the lexer so Pygments (and therefore mkdocs-material / pymdownx)
# resolves the ```torquescript fence language by alias.
[project.entry-points."pygments.lexers"]
torquescript = "pygments_torquescript:TorqueScriptLexer"
